--- a/plugin.yml
+++ b/plugin.yml
@@ -1,4 +1,4 @@
 name: NoFloatingTrees
-version: 0.7
+version: 0.8
 main: uk.co.jacekk.bukkit.NoFloatingTrees.NoFloatingTrees
-load: startup
+softdepend: [LogBlock]
