Made log decay start after an amount of time rather than being based on nearby players.

--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,7 @@
 			<groupId>de.diddiz.LogBlock</groupId>
 			<artifactId>LogBlock</artifactId>
 			<version>1.58</version>
-			<scope>runtime</scope>
+			<scope>compile</scope>
 		</dependency>
 	</dependencies>
 	
