--- a/pom.xml
+++ b/pom.xml
@@ -36,14 +36,14 @@
 		<dependency>
 			<groupId>uk.co.jacekk.bukkit</groupId>
 			<artifactId>baseplugin</artifactId>
-			<version>5.0</version>
+			<version>7.0-SNAPSHOT</version>
 			<scope>compile</scope>
 		</dependency>
 		
 		<dependency>
 			<groupId>org.bukkit</groupId>
 			<artifactId>bukkit</artifactId>
-			<version>1.4.2-R0.2</version>
+			<version>1.4.6-R0.2-SNAPSHOT</version>
 			<scope>compile</scope>
 		</dependency>
 		
