--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
 		<dependency>
 			<groupId>uk.co.jacekk.bukkit</groupId>
 			<artifactId>baseplugin</artifactId>
-			<version>7.0</version>
+			<version>8.0</version>
 			<scope>compile</scope>
 		</dependency>
 		
@@ -49,9 +49,9 @@
 		</dependency>
 		
 		<dependency>
-			<groupId>de.diddiz.LogBlock</groupId>
-			<artifactId>LogBlock</artifactId>
-			<version>1.60</version>
+			<groupId>dev.bukkit.org.server-mods</groupId>
+			<artifactId>logblock</artifactId>
+			<version>1.61</version>
 			<scope>compile</scope>
 		</dependency>
 	</dependencies>
