--- a/pom.xml
+++ b/pom.xml
@@ -2,14 +2,16 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>uk.co.jacekk.bukkit</groupId>
 	<artifactId>nofloatingtrees</artifactId>
+	<name>NoFloatingTrees</name>
 	<version>0.12</version>
 	<packaging>jar</packaging>
-	
-	<name>NoFloatingTrees</name>
 	<url>http://dev.bukkit.org/server-mods/nofloatingtrees/</url>
 	
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		
+		<upload.dbo.category>server-mods</upload.dbo.category>
+		<upload.dbo.slug>nofloatingtrees</upload.dbo.slug>
 	</properties>
 	
 	<repositories>
