--- a/pom.xml
+++ b/pom.xml
@@ -5,16 +5,16 @@
 	<name>NoFloatingTrees</name>
 	<version>0.12</version>
 	<packaging>jar</packaging>
-	<url>http://dev.bukkit.org/server-mods/nofloatingtrees/</url>
+	<url>http://dev.bukkit.org/bukkit-plugins/nofloatingtrees/</url>
 	
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		
-		<upload.dbo.category>server-mods</upload.dbo.category>
+		<upload.dbo.category>bukkit-plugins</upload.dbo.category>
 		<upload.dbo.slug>nofloatingtrees</upload.dbo.slug>
 		
-		<baseplugin.version>11.1</baseplugin.version>
-		<baseplugin.package>11_1</baseplugin.package>
+		<baseplugin.version>12</baseplugin.version>
+		<baseplugin.package>12</baseplugin.package>
 	</properties>
 	
 	<repositories>
